# SSL-Checker

./: .gitignore  LICENSE  README.es.md  README.md  README.pt.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
backup-readme-20260622-211011/: README.md
backup-readme-screenshots-20260622-212012/: README.md
docs/: SECURITY-NOTE.md
scripts/: build-release.ps1
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
