[package]
name = "ssl-checker"
version = "1.0.0"
description = "MPTech SSL Checker"
authors = ["MPTech Tools"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-tls = "0.2"
x509-parser = "0.16"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
hex = "0.4"
rfd = "0.15"
